冠军生成机制初步实现. 等级计算